--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          export ECR_REPOSITORY=movie-app-demo
+          export IMAGE_TAG=latest
+          export ECR_REGISTRY=443576553363.dkr.ecr.us-west-1.amazonaws.com
           aws ecr get-login-password --region us-west-1 | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
           docker pull ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
           docker stop react-app || true
