--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Build, Push Image, and Deploy to EC2
+    name: Build, Test Image, and Deploy to EC2
     runs-on: ubuntu-latest
 
     env:
@@ -23,6 +23,12 @@ jobs:
         with:
           node-version: '18.17.1'
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run unit tests (local)
+        run: npm test -- --watchAll=false
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -37,6 +43,10 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
+
+      - name: Run tests inside Docker image
+        run: |
+          docker run --rm ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} npm test -- --watchAll=false
 
       - name: Push Docker image to ECR
         run: |
