--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ name: Build and Deploy React App to EC2
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-deploy:
-    name: Build, Test Image, and Deploy to EC2
+    name: Build, Push Image, and Deploy to EC2
     runs-on: ubuntu-latest
 
     env:
@@ -23,12 +23,6 @@ jobs:
         with:
           node-version: '18.17.1'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run unit tests (local)
-        run: npm test -- --watchAll=false
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -43,10 +37,6 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
-
-      - name: Run tests inside Docker image
-        run: |
-          docker run --rm ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} npm test -- --watchAll=false
 
       - name: Push Docker image to ECR
         run: |
